objects/geopointe__GP_Device_Event__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Auto_Check_In_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto Check In Record</label>
        <referenceTo>geopointe__Check_In__c</referenceTo>
        <relationshipLabel>Geopointe Device Events</relationshipLabel>
        <relationshipName>Geopointe_Device_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Check_In_Status__c</fullName>
        <label>Auto Check In Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NOT_APPLICABLE</fullName>
                    <default>true</default>
                    <label>NOT_APPLICABLE</label>
                </value>
                <value>
                    <fullName>INITIATED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED_NOTHING_NEARBY</fullName>
                </value>
                <value>
                    <fullName>COMPLETED_SUCCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Auto_Check_Out_Status__c</fullName>
        <label>Auto Check Out Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Initiating</fullName>
                </value>
                <value>
                    <fullName>Nothing Nearby</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Device_Mileage__c</fullName>
        <label>Device Mileage</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Device__c</fullName>
        <label>Device</label>
        <referenceTo>geopointe__GP_Device__c</referenceTo>
        <relationshipLabel>Geopointe Device Events</relationshipLabel>
        <relationshipName>Geopointe_Device_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Eid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Event_Code__c</fullName>
        <label>Event Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IGON</fullName>
                </value>
                <value>
                    <fullName>IGOFF</fullName>
                </value>
                <value>
                    <fullName>START</fullName>
                </value>
                <value>
                    <fullName>STOP</fullName>
                </value>
                <value>
                    <fullName>DISCON</fullName>
                </value>
                <value>
                    <fullName>CONN</fullName>
                </value>
                <value>
                    <fullName>HDACC</fullName>
                </value>
                <value>
                    <fullName>HDDEC</fullName>
                </value>
                <value>
                    <fullName>HDLFT</fullName>
                </value>
                <value>
                    <fullName>HDRGT</fullName>
                </value>
                <value>
                    <fullName>COLL</fullName>
                </value>
                <value>
                    <fullName>IDLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Event_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Device Event</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Device Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>